# zephyr-sandbox

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  env.example  example.env  prj.conf  sample.yml  west.yml
app/: CMakeLists.txt  Kconfig  VERSION  debug.conf  prj.conf  sample.yml
app/src/: Entrypoint.swift
doc/: readme.md  usage.md
drivers/: CMakeLists.txt  Kconfig
drivers/blink/: CMakeLists.txt  Kconfig  Kconfig.gpio_led
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/example_sensor/: CMakeLists.txt  Kconfig
drivers/sensor/sandbox_sensor/: CMakeLists.txt  Kconfig  SandboxSensor.swift
dts/bindings/blink/: blink-gpio-leds.yaml
dts/bindings/sensor/: zephyr,example-sensor.yaml  zephyr,sandbox-sensor.yaml
lib/: CMakeLists.txt  Kconfig
lib/hello/: CMakeLists.txt  Hello.swift  Kconfig
lib/hello/zephyr/: module.yml
lib/utils/: CMakeLists.txt  random.swift
lib/zephyr/: module.yml
modules/hello/: CMakeLists.txt
modules/hello/lib/: Hello.swift
src/: Entrypoint.swift  Hello.swift
zephyr/: module.yml
